@@ -245,6 +245,10 @@ public class TownyFlatFileSource extends TownyDataSource {
 				if (line != null)
 					resident.setNPC(Boolean.parseBoolean(line));
 				
+				line = kvFile.get("title");
+				if (line != null)
+					resident.setTitle(line);
+				
 				line = kvFile.get("town");
 				if (line != null)
 					resident.setTown(universe.getTown(line));
@@ -846,6 +850,8 @@ public class TownyFlatFileSource extends TownyDataSource {
 			fout.write("registered=" + Long.toString(resident.getRegistered()) + newLine);
 			// isNPC
 			fout.write("isNPC=" + Boolean.toString(resident.isNPC()) + newLine);
+			// totle
+			fout.write("title=" + resident.getTitle() + newLine);
 			if (resident.hasTown())
 				fout.write("town=" + resident.getTown().getName() + newLine);
 			// Friends
